k8s/apps/samba/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: samba
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
