k8s/apps/samba/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: quay.io/samba.org/samba-server:v0.9@sha256:6e1a4719586d78f94f8007d6d04a8390104bfd6ee4f4ca3a51fc04752e24b1a5
          ports:
            - name: smb
              containerPort: 445
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/samba-container/config.yaml
              readOnly: true
              subPath: sambacc.yaml
            - name: users
              mountPath: /etc/samba-container/users.yaml
              readOnly: true
              subPath: users.yaml
            - name: pool
              mountPath: /mnt/pool
            - name: local
              mountPath: /mnt/local
          securityContext:
            allowPrivilegeEscalation: false
            # /etc/passwd を動的に編集する必要がある
            readOnlyRootFilesystem: false
      volumes:
        - name: config
          configMap:
            name: app-config
        - name: users
          secret:
            secretName: app-secret
        - name: pool
          hostPath:
            path: /mnt/pool
            type: Directory
        - name: local
          hostPath:
            path: /mnt/local
            type: Directory
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
