k8s/apps/samba/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app

spec:
  selector:
    app: default
  type: NodePort
  ports:
    - name: smb
      port: 445
      targetPort: smb
      nodePort: 445
      protocol: TCP
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: PreferDualStack
