k8s/apps/samba/resources/network.yaml
# NodePort で LAN の端末から IPv4 で使う。それ以外からの ingress は受け付けない。
# kube-proxy replacement の単一ノードでは NodePort 経由でも送信元 IP が保たれるため、
# fromCIDR で LAN の端末に絞れる。
# Service はデュアルスタックだが、LAN の IPv6 は ISP から払い出されるプレフィックスで
# 変わりうるため許可しない
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: app

spec:
  endpointSelector:
    matchLabels:
      app: default
  ingress:
    - fromCIDRSet:
        - cidr: 192.168.1.0/24
      toPorts:
        - ports:
            - port: "445"
              protocol: TCP
